--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qs": "^6.11.0",
     "tiny-emitter": "^2.1.0",
     "uuid": "^9.0.0",
+    "vanilla-jsoneditor": "^0.18.12",
     "vue": "^3.3.4",
     "vue-router": "^4.1.6",
     "vue3-ace-editor": "^2.2.2",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.8",
     "@types/node": "^20.4.9",
+    "@types/qs": "^6.9.8",
     "@types/uuid": "^9.0.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
