--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/frontend-library"]
 	path = lib/frontend-library
-	url = git@github.com:opteacher/frontend-library.git
+	url = https://github.com/opteacher/frontend-library.git
