--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
+    "codemirror-editor-vue3": "^2.4.1",
     "dayjs": "^1.11.7",
     "happy-dom": "^8.9.0",
     "lodash-es": "^4.17.21",
