--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.7",
     "happy-dom": "^8.9.0",
     "lodash-es": "^4.17.21",
+    "mqtt": "^5.5.0",
     "pinia": "^2.1.6",
     "qs": "^6.11.0",
     "tiny-emitter": "^2.1.0",
