--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/frontend-library"]
-	path = lib/frontend-library
+[submodule "src/lib"]
+	path = src/lib
 	url = https://github.com/opteacher/frontend-library.git
