--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "/*return project.name*/",
+  "name": "mid-temp-new",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "ant-design-vue": "^4.0.0",
-    "axios": "^1.4.0",
-    "codemirror-editor-vue3": "^2.4.1",
-    "dayjs": "^1.11.7",
-    "happy-dom": "^8.9.0",
+    "@ant-design/icons-vue": "^7.0.1",
+    "ant-design-vue": "^4.2.6",
+    "axios": "^1.8.4",
+    "codemirror": "^6.0.1",
+    "codemirror-editor-vue3": "^2.8.0",
+    "dayjs": "^1.11.13",
+    "happy-dom": "^17.4.4",
     "lodash-es": "^4.17.21",
-    "mqtt": "^5.5.0",
-    "pinia": "^2.1.6",
-    "qs": "^6.11.0",
+    "paho-mqtt": "^1.1.0",
+    "qs": "^6.14.0",
     "tiny-emitter": "^2.1.0",
-    "uuid": "^9.0.0",
-    "vanilla-jsoneditor": "^0.18.12",
-    "vue": "^3.3.4",
-    "vue-router": "^4.1.6",
-    "vue3-ace-editor": "^2.2.2",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.12/xlsx-0.18.12.tgz"
+    "uuid": "^11.1.0",
+    "vanilla-jsoneditor": "^3.3.1",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
+    "vue3-ace-editor": "^2.2.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.8",
-    "@types/node": "^20.4.9",
-    "@types/qs": "^6.9.8",
-    "@types/uuid": "^9.0.2",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "prettier": "3.0.1",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.6.2",
-    "vite": "^4.4.5",
-    "vue-tsc": "^2.0.29"
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.14.1",
+    "@types/paho-mqtt": "^1.0.10",
+    "@types/qs": "^6.9.18",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.7.2",
+    "vite": "^6.2.0",
+    "vue-tsc": "^2.2.4"
   }
 }
